# simpleconf

./: .gitignore  Makefile.am  README.md  configure.ac
example/: Makefile.am  main.cpp
include/: Makefile.am
include/simpleconf/: simpleconf.hpp
src/: Makefile.am  simpleconf.cpp
