AC_INIT([Simple configuration library for C++],
        [0.1],
        [evilissimo@gmail.com],
        [simpleconf],
        [http://github.com/vinzenz/simpleconf])
AC_PREREQ([2.59])

AM_INIT_AUTOMAKE([1.10 -Wall no-define subdir-objects])

AC_PROG_CXX
AC_CONFIG_MACRO_DIR([m4])
AM_PROG_AR
LT_INIT

AC_CONFIG_FILES([
    Makefile
    example/Makefile
    include/Makefile
    src/Makefile
])
AC_OUTPUT
